# drone_system_assessment

./: .dockerignore  .gitignore  ANALYSIS.md  Dockerfile  README.md  SUBMISSION.md  requirements.txt
.github/workflows/: integration_test.yml
patches/: px4-gazebo-classic-build.patch
scripts/: bootstrap_px4.sh  check_integration_run.py  run_integration_test.sh
src/drone_system/: package.xml  setup.cfg  setup.py
src/drone_system/config/: params.yaml
src/drone_system/drone_system/: __init__.py  car_simulator.py  drone_manager.py  follower_node.py  health_monitor.py  log_utils.py  px4_manager.py  telemetry_recorder.py
src/drone_system/launch/: full_stack.launch.py  mock_stack.launch.py
src/drone_system/models/car/: model.config  model.sdf
src/drone_system/models/drone/: model.config  model.sdf
src/drone_system/worlds/: follow_world.world
tools/: log_summary.py  plot_run.py
